# Sebastian

./: Makefile  Makefile.in  README.md  addcm.sh  config.h  config.h.in  config.status  configure  configure.in  lex.yy.c  myimg  mystring.h  scan  scan.c  scanner.h  scanner.l  sebastian  sebastian.c  sebastian.h  sebastian.l  task.c  test.l
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
plugin/task/: Makefile  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  reminder  reminder.c  sttyraw  sttyraw.c
plugin/task/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
plugin/task/src/: Makefile  Makefile.am  Makefile.in  forkc.c  forkc.h  main.c  main.h  reminder.c  reminder.h  signalc.c  signalc.h
plugin/task/src/.deps/: forkc.Po  main.Po  reminder.Po  signalc.Po
src/: Makefile  Makefile.am  Makefile.in  Sebastian  calc.c  calc.l  calc.tab.c  calc.y  config.c  config.h  daemon  daemon.c  exec  exec.c  forkc.c  forkc.h  lex.yy.c  lex.yy.l  main.c  main.h  myimg.c  notify.c  notify.h  scan.c  scan.h  scan.l  scandir.c  scandir.h  sebastian.c  sebastian.h  sebastian.l  task  task.c  task.h  test.php
src/.deps/: buffer.Po  calc.Po  calc.tab.Po  config.Po  forkc.Po  lex.yy.Po  main.Po  notify.Po  scandir.Po  sebastian.Po  ukbhit.Po
src/proto/: forkc.c  forkc.h  pipe.c  pipec.c  pipec.h
src/test/: testcd  testcd.c
